syntax = "proto3";

package proto;

import "entities.proto";
option go_package = "./service";

service BrandService {
    rpc CreateBrand (CreateBrandRequest) returns (BrandResponse);
    rpc GetFeaturedBrands (GetFeaturedBrandsRequest) returns (BrandListResponse);
    rpc GetFeaturedWithDeletedBrands (GetFeaturedBrandsRequest) returns (BrandListResponse);
    rpc FindBrandByName (FindBrandByNameRequest) returns (BrandResponse);
    rpc FindBrandByID(FindBrandByIDRequest) returns (BrandResponse);
    rpc UpdateBrand (Brand) returns (BrandResponse);
    rpc DeleteBrand (DeleteBrandRequest) returns (DeleteBrandResponse);
    rpc DeleteForeverBrand (DeleteBrandByNameRequest) returns (DeleteBrandResponse);
}

message CreateBrandRequest {
    string name = 1;
    string description = 2;
    string video_url = 3;
    string logo = 4;
}

message GetFeaturedBrandsRequest {
    int32 amount = 1;
}

message FindBrandByNameRequest {
    string name = 1;
}
message FindBrandByIDRequest {
    uint64 id = 1;
}


message DeleteBrandRequest {
    uint64 id = 1;
}

message BrandResponse {
    Brand brand = 1;
    ErrorResponse error = 2;
}

message BrandListResponse {
    repeated Brand brands = 1;
    ErrorResponse error = 2;
}

message DeleteBrandResponse {
    ErrorResponse error = 1;
}

 message DeleteBrandByNameRequest {
    string name = 1;
  }
