syntax = "proto3";

package proto;

import "entities.proto";
option go_package = "./service";

// mainpage
service HomeService {
    rpc GetHomeData (EmptyRequest) returns (HomeDataResponse);
}

message EmptyRequest {}
message HomeDataResponse {
    repeated Category categories = 1;
    repeated Product featured_products = 2;
    repeated Brand brands = 3;
    ErrorResponse error = 4;
}
